--- a/Request Refill/Windows/Settings.xaml
+++ b/Request Refill/Windows/Settings.xaml
@@ -65,13 +65,13 @@
 				</StackPanel>
 				<Rectangle Height="32"/>
 				<StackPanel Width="392">
-					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Кабинет" />
+					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Сотрудник" />
 					<Rectangle Height="16"/>
 					<ComboBox FontSize="24" FontFamily="{StaticResource Proletarsk}" Height="48" Name="ComboboxFromWhoDefaultSelect" DisplayMemberPath="FIO" SelectedValuePath="EmployeeID"/>
 				</StackPanel>
 				<Rectangle Height="32"/>
 				<StackPanel Width="392">
-					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Кабинет"/>
+					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Принтер"/>
 					<Rectangle Height="16"/>
 					<ComboBox FontSize="24" FontFamily="{StaticResource Proletarsk}" Height="48" Name="ComboboxPrinterDefaultSelect" DisplayMemberPath="PrinterInfo" SelectedValuePath="PrinterID"/>
 				</StackPanel>
