--- a/Request Refill/Windows/WindowTraySelectFuntion.xaml
+++ b/Request Refill/Windows/WindowTraySelectFuntion.xaml
@@ -10,8 +10,9 @@
 		ShowInTaskbar="False"
 		Title="Request Refill"
 		Topmost="True"
+		Deactivated="Window_Deactivated"
 		
-        SizeToContent="WidthAndHeight" AllowsTransparency="True" MouseLeave="Window_MouseLeave">
+        SizeToContent="WidthAndHeight" AllowsTransparency="True"  > <!--MouseLeave="Window_MouseLeave"-->
 	<Border Background="White" CornerRadius="32" Margin="20,20,20,30" >
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
