--- a/Request Refill/Windows/WindowTraySelectFuntion.xaml
+++ b/Request Refill/Windows/WindowTraySelectFuntion.xaml
@@ -11,23 +11,32 @@
 		Title="Request Refill"
 		Topmost="True"
 		Deactivated="Window_Deactivated"
-		
-        SizeToContent="WidthAndHeight" AllowsTransparency="True"  > <!--MouseLeave="Window_MouseLeave"-->
+		SizeToContent="WidthAndHeight"
+		AllowsTransparency="True"  >
+	
+	<Window.Resources>
+		<FontFamily x:Key="Proletarsk">
+			pack://application:,,,/Fonts/Proletarsk.ttf#Proletarsk
+		</FontFamily>
+	</Window.Resources>
+
+
+
 	<Border Background="White" CornerRadius="32" Margin="20,20,20,30" >
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
 		<StackPanel Margin="8">
 
-			<Button Content="Замена картриджа" Width="364" Height="60" Click="OpenReplaceCartridge"/>
+			<Button Content="Создание заявки" Width="364" Height="60" Click="OpenCreateRequestRefill_Click" Background="#FF3B62ED" FontFamily="{StaticResource Proletarsk}" FontSize="24" Foreground="White"/>
 			<Rectangle Height="10"/>
-			<Button Content="Создание заявки" Width="364" Height="60" Click="OpenCreateRequestRefill_Click"/>
+			<Button Content="Замена картриджа" Width="364" Height="60" Click="OpenReplaceCartridge" Background="#FF3B62ED" FontFamily="{StaticResource Proletarsk}" FontSize="24" Foreground="White"/>
 			<Rectangle Height="10"/>
-			<Button Content="Настройки" Width="364" Height="60" Click="OpenSettings_Click"/>
+			<Button Content="Настройки" Width="364" Height="60" Click="OpenSettings_Click" Background="#FF3B62ED" FontFamily="{StaticResource Proletarsk}" FontSize="24" Foreground="White"/>
 			<Rectangle Height="10"/>
-			<Button Content="О программе" Width="364" Height="60"/>
+			<Button Content="О программе" Width="364" Height="60" Background="#FF3B62ED" FontFamily="{StaticResource Proletarsk}" FontSize="24" Foreground="White"/>
 			<Rectangle Height="10"/>
-			<Button Content="Закрыть Request Refill" Width="364" Height="60" Click="Shutdown_Click"/>
+			<Button Content="Закрыть Request Refill" Width="364" Height="60" Click="Shutdown_Click" Background="#FF3B62ED" FontFamily="{StaticResource Proletarsk}" FontSize="24" Foreground="White"/>
 
 		</StackPanel>
     </Border>
