--- a/Request Refill/SetupWizardSettingsPages/SetupWizardSettings_Page1.xaml
+++ b/Request Refill/SetupWizardSettingsPages/SetupWizardSettings_Page1.xaml
@@ -20,7 +20,7 @@
 		<StackPanel Margin="32,18,32,32">
 			<TextBlock Grid.Row="0" Text="Кабинет" FontSize="24" FontFamily="{StaticResource Proletarsk}"/>
 			<Rectangle Height="16"/>
-			<ComboBox  Grid.Row="1" Name="Combobox_SelectCabinet" SelectedValuePath="CabinetID" DisplayMemberPath="CabinetName" SelectionChanged="Combobox_SelectCabinet_SelectionChanged"/>
+			<ComboBox  Grid.Row="1" Name="Combobox_SelectCabinet" SelectedValuePath="CabinetID" DisplayMemberPath="CabinetName" SelectionChanged="Combobox_SelectCabinet_SelectionChanged" SelectedIndex="0"/>
 		</StackPanel>
 		<Grid Grid.Row="1" Margin="8">
 			<Grid.ColumnDefinitions>
